# melon

./: .clang-format  .gitignore  .gitmodules  .syntastic_c_config  CMakeLists.txt  CMakeSettings.json  README.md  graphics_backend.h  setup.sh
assets/shaders/: passthrough.frag  passthrough.vert
cmake/: CMakeGet.cmake
examples/: CMakeLists.txt
examples/triangle/: main.c  main.cpp
include/melon/: core.h  core.hpp  error.hpp  gfx.h  gfx.hpp
include/melon/core/: error.h  handle.h  memory.h
include/melon/gfx/: backend.h  window.h
lib/engine/: core.c  core.h  error.h  file_utils.c  file_utils.h  graphics_backend.c  graphics_backend.h  tz_core.c  tz_core.h  tz_error.h  tz_graphics_backend.c  tz_graphics_backend.h
src/: core.cpp  gfx.cpp  graphics_backend.c  graphics_backend.h  main.c
src/core/: error.c  error.cpp  handle.c  memory.c  memory.cpp
src/gfx/: backend.c  backend_gl.c  gfx.c  gfx.cpp  gfx_commands.c  gfx_commands.cpp  gfx_commands.h  gfx_gl.cpp  window.c  window_backend.h  window_glfw.c
test/: CMakeLists.txt  pool_test.c  pool_test.cpp  pool_test.t.cpp
test/gfx_test/: main.cpp
